set cover img height on index page to 250px. takes care of layout bug

--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ nav.sitenav ul > li:last-of-type > a {
 .inventory-table li img {
 	display: block;
 	width: 100%;
-	height: auto;
+	height: 250px;
 	transition: box-shadow 0.2s ease-in-out;
 	box-shadow: 0px 0px 15px 1px transparent;
 }
